@@ -215,7 +215,7 @@ int oper_has_access(struct userNode *user, struct userNode *bot, unsigned int mi
 void nickserv_show_oper_accounts(struct userNode *user, struct svccmd *cmd);
 
 struct handle_info *get_victim_oper(struct svccmd *cmd, struct userNode *user, const char *target);
-struct handle_info *loc_auth(char *handle, char *password);
+struct handle_info *loc_auth(char *handle, char *password, char *userhost);
 
 typedef void (*user_mode_func_t)(struct userNode *user, const char *mode_change);
 void reg_user_mode_func(user_mode_func_t func);
